[package]

name = "icaparse"
version = "0.1.0"
authors = ["Craig Hills <chills@gmail.com>", "Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tiny, safe, speedy, zero-copy ICAP/1.x parser."
repository = "https://github.com/chills42/icaparse"

[features]
default = ["std"]
std = []

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
