[package]

name = "icaparse"
version = "0.2.0"
authors = ["Craig Hills <chills@gmail.com>", "Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tiny, safe, speedy ICAP/1.0 parser."
repository = "https://github.com/chills42/icaparse"

[features]
default = ["std"]
std = []

[dependencies]
httparse = "^1.2.3"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
